responsive done, interactivity left

--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
 				</div>
 			</div>
 		</article>
-		<article class="cart rad">
+		<aside class="cart rad">
 			<h3>Your cart (0)</h3>
 			<div class="empty-msg">
 				<img src="assets/images/illustration-empty-cart.svg" alt="">
 				<p class="hint">Your added items will appear here</p>
 			</div>
-		</article>
+		</aside>
 	</main>
 </body>
 </html>
