saving state when carting a product, styles for quantity container done

--- a/index.html
+++ b/index.html
@@ -9,172 +9,7 @@
 </head>
 <body>
 
-	<main>
-		<article>
-			<h1>Desserts</h1>
-			<div class="desserts">
-				<div class="dessert">
-					<picture class="illustration">
-						<source srcset="assets/images/image-waffle-mobile.jpg"
-						media="(max-width:600px)">
-						<img src="assets/images/image-waffle-desktop.jpg" alt="">
-						<button>
-							<div class="carter">
-								<img src="assets/images/icon-add-to-cart.svg" alt="">
-								Add to Cart
-							</div>
-							<div class="quantifier"></div>
-						</button>
-					</picture>
-					<span>Waffle</span>
-					<p class="flavor">Waffle with Berries</p>
-					<h5>$6.50</h5>
-				</div>
-				<div class="dessert">
-					<picture class="illustration">
-						<source srcset="assets/images/image-creme-brulee-mobile.jpg"
-						media="(max-width:600px)">
-						<img src="assets/images/image-creme-brulee-desktop.jpg" alt="">
-						<button>
-							<div class="carter">
-								<img src="assets/images/icon-add-to-cart.svg" alt="">
-								Add to Cart
-							</div>
-							<div class="quantifier"></div>
-						</button>
-					</picture>
-					<span>Creme Brulee</span>
-					<p class="flavor">Vanilla Bean Creme Brulee</p>
-					<h5>$7.00</h5>
-				</div>
-				<div class="dessert">
-					<picture class="illustration">
-						<source srcset="assets/images/image-macaron-mobile.jpg"
-						media="(max-width:600px)">
-						<img src="assets/images/image-macaron-desktop.jpg" alt="">
-						<button>
-							<div class="carter">
-								<img src="assets/images/icon-add-to-cart.svg" alt="">
-								Add to Cart
-							</div>
-							<div class="quantifier"></div>
-						</button>
-					</picture>
-					<span>Macaron</span>
-					<p class="flavor">Macaron Mix of Five</p>
-					<h5>$8.00</h5>
-				</div>
-				<div class="dessert">
-					<picture class="illustration">
-						<source srcset="assets/images/image-tiramisu-mobile.jpg"
-						media="(max-width:600px)">
-						<img src="assets/images/image-tiramisu-desktop.jpg" alt="">
-						<button>
-							<div class="carter">
-								<img src="assets/images/icon-add-to-cart.svg" alt="">
-								Add to Cart
-							</div>
-							<div class="quantifier"></div>
-						</button>
-					</picture>
-					<span>Tiramisu</span>
-					<p class="flavor">Classic Tiramisu</p>
-					<h5>$5.50</h5>
-				</div>
-				<div class="dessert">
-					<picture class="illustration">
-						<source srcset="assets/images/image-baklava-mobile.jpg"
-						media="(max-width:600px)">
-						<img src="assets/images/image-baklava-desktop.jpg" alt="">
-						<button>
-							<div class="carter">
-								<img src="assets/images/icon-add-to-cart.svg" alt="">
-								Add to Cart
-							</div>
-							<div class="quantifier"></div>
-						</button>
-					</picture>
-					<span>Baklava</span>
-					<p class="flavor">Pistachio Baklava</p>
-					<h5>$4.00</h5>
-				</div>
-				<div class="dessert">
-					<picture class="illustration">
-						<source srcset="assets/images/image-meringue-mobile.jpg"
-						media="(max-width:600px)">
-						<img src="assets/images/image-meringue-desktop.jpg" alt="">
-						<button>
-							<div class="carter">
-								<img src="assets/images/icon-add-to-cart.svg" alt="">
-								Add to Cart
-							</div>
-							<div class="quantifier"></div>
-						</button>
-					</picture>
-					<span>Pie</span>
-					<p class="flavor">Lemon Meringue Pie</p>
-					<h5>$5.00</h5>
-				</div>
-				<div class="dessert">
-					<picture class="illustration">
-						<source srcset="assets/images/image-cake-mobile.jpg"
-						media="(max-width:600px)">
-						<img src="assets/images/image-cake-desktop.jpg" alt="">
-						<button>
-							<div class="carter">
-								<img src="assets/images/icon-add-to-cart.svg" alt="">
-								Add to Cart
-							</div>
-							<div class="quantifier"></div>
-						</button>
-					</picture>
-					<span>Cake</span>
-					<p class="flavor">Red Velvet Cake</p>
-					<h5>$4.50</h5>
-				</div>
-				<div class="dessert">
-					<picture class="illustration">
-						<source srcset="assets/images/image-brownie-mobile.jpg"
-						media="(max-width:600px)">
-						<img src="assets/images/image-brownie-desktop.jpg" alt="">
-						<button>
-							<div class="carter">
-								<img src="assets/images/icon-add-to-cart.svg" alt="">
-								Add to Cart
-							</div>
-							<div class="quantifier"></div>
-						</button>
-					</picture>
-					<span>Brownie</span>
-					<p class="flavor">Salted Caramel Brownie</p>
-					<h5>$5.50</h5>
-				</div>
-				<div class="dessert">
-					<picture class="illustration">
-						<source srcset="assets/images/image-panna-cotta-mobile.jpg"
-						media="(max-width:600px)">
-						<img src="assets/images/image-panna-cotta-desktop.jpg" alt="">
-						<button>
-							<div class="carter">
-								<img src="assets/images/icon-add-to-cart.svg" alt="">
-								Add to Cart
-							</div>
-							<div class="quantifier"></div>
-						</button>
-					</picture>
-					<span>Pana Cotta</span>
-					<p class="flavor">Vanilla Pana Cotta</p>
-					<h5>$6.50</h5>
-				</div>
-			</div>
-		</article>
-		<aside class="cart rad">
-			<h3>Your cart (0)</h3>
-			<div class="empty-msg">
-				<img src="assets/images/illustration-empty-cart.svg" alt="">
-				<p class="hint">Your added items will appear here</p>
-			</div>
-		</aside>
-	</main>
+	<main></main>
+	<script src="./index.jsx" type="module"></script>
 </body>
 </html>
